Retrait du controle de gestion dans le workflow de validation du ban de caisse Prise en compte du controle du compte analytique des lignes de pièces de caisse seulement pour les produits et les charges Correction de la création d'un relevé de banque par un agent de caisse Ajout du destinataire d'un paiement (pad, autre, apm) Prise en compte des observations concernant le procès verbal de caisse

--- a/servoo_finance/i18n/fr.po
+++ b/servoo_finance/i18n/fr.po
@@ -2811,8 +2811,8 @@ msgstr "Vous devez définir un compte pour toutes les lignes"
 #. module: servoo_finance
 #: code:addons/servoo_finance/wizard/cashier_piece_wizard.py:0
 #, python-format
-msgid "You must set analytic account for all lines"
-msgstr "Vous devez définir un compte analytique pour toutes les lignes"
+msgid "You must set analytic account for income and expenses"
+msgstr "Vous devez définir un compte analytique pour les produits et les charges"
 
 #. module: servoo_finance
 #. openerp-web
