--- a/servoo_sales/i18n/fr.po
+++ b/servoo_sales/i18n/fr.po
@@ -6,8 +6,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Odoo Server 15.0-20220616\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-02-08 10:11+0000\n"
-"PO-Revision-Date: 2023-02-08 10:11+0000\n"
+"POT-Creation-Date: 2023-02-09 09:40+0000\n"
+"PO-Revision-Date: 2023-02-09 09:40+0000\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -54,17 +54,20 @@ msgid ""
 "                                                       #----------------------\n"
 "                                                       # VOLUME: the volume                                                \n"
 "                                                       # TONNAGE: The tonnage of goods\n"
+"                                                       # HANDLING: The handling rate per tonne\n"
 "                                                       # rules: object containing the rules code (previously computed)\n"
 "\n"
 "                                                       # Note: returned value have to be set in the variable 'result_qty'"
 msgstr ""
-" # Available variables:\n"
+" # Variables disponibles:\n"
 "                                                       #----------------------\n"
 "                                                       # VOLUME: le volume de la marchandise                                                \n"
 "                                                       # TONNAGE: Le tonnage des marchandises\n"
+"                                                       # HANDLING: Le tarif de manutention par tonne\n"
 "                                                       # rules: objet contenant le code des règles (précédemment calculé)\n"
 "\n"
 "                                                       # Remarque : la valeur renvoyée doit être définie dans la variable 'result_qty'"
+
 
 #. module: servoo_sales
 #: model:ir.model.fields,help:servoo_sales.field_sale_order_template_line__amount_python_compute
@@ -73,6 +76,7 @@ msgid ""
 "                                                     #----------------------\n"
 "                                                     # VOLUME: the volume\n"
 "                                                     # TONNAGE: The tonnage of goods\n"
+"                                                     # HANDLING: The handling rate per tonne\n"
 "                                                     # rules: object containing the rules code (previously computed)\n"
 "\n"
 "                                                     # Note: returned value have to be set in the variable 'result'"
@@ -81,9 +85,11 @@ msgstr ""
 "                                                     #----------------------\n"
 "                                                     # VOLUME: le volume de la marchandise\n"
 "                                                     # TONNAGE: Le tonnage des marchandises\n"
+"                                                     # HANDLING: Le tarif de manutention par tonne\n"
 "                                                     # rules: objet contenant le code des règles (précédemment calculé)\n"
 "\n"
 "                                                     # Remarque : la valeur renvoyée doit être définie dans la variable 'result'"
+
 
 #. module: servoo_sales
 #: code:addons/servoo_sales/models/utils.py:0
@@ -243,8 +249,14 @@ msgid ""
 "<span colspan=\"2\">Available variables:</span>\n"
 "                                <span colspan=\"2\">VOLUME: the volume</span>\n"
 "                                <span colspan=\"2\">TONNAGE: the weight</span>\n"
+"                                <span colspan=\"2\">HANDLING: the handling rate per tonne</span>\n"
 "                                <span colspan=\"2\">rules: object containing the rules code (previously computed)</span>"
 msgstr ""
+"<span colspan=\"2\">Available variables:</span>\n"
+"                                <span colspan=\"2\">VOLUME: le volume</span>\n"
+"                                <span colspan=\"2\">TONNAGE: le tonnage</span>\n"
+"                                <span colspan=\"2\">HANDLING: Le tarif de manutention par tonne</span>\n"
+"                                <span colspan=\"2\">rules: objet contenant les code des règles (précédement calculées)</span>"
 
 #. module: servoo_sales
 #: model_terms:ir.ui.view,arch_db:servoo_sales.servoo_sale_order_template_form
@@ -252,6 +264,8 @@ msgid ""
 "<span colspan=\"2\">Returned value have to be set in the variable 'result_qty' for quantity</span>\n"
 "                                <span colspan=\"2\">Returned value have to be set in the variable 'result' for amount</span>"
 msgstr ""
+"<span colspan=\"2\">La valeur renvoyée doit être définie dans la variable 'result_qty' pour la quantité</span>\n"
+"                                <span colspan=\"2\">La valeur renvoyée doit être définie dans la variable 'résultat' pour le montant</span>"
 
 #. module: servoo_sales
 #: model_terms:ir.ui.view,arch_db:servoo_sales.servoo_report_invoice_document
@@ -404,6 +418,13 @@ msgid "<strong>Y/Ref:</strong>"
 msgstr "<strong>V/Réf:</strong>"
 
 #. module: servoo_sales
+#: model:ir.model.fields,field_description:servoo_sales.field_account_bank_statement_line__apm_reference
+#: model:ir.model.fields,field_description:servoo_sales.field_account_move__apm_reference
+#: model:ir.model.fields,field_description:servoo_sales.field_account_payment__apm_reference
+msgid "APM Reference"
+msgstr "Numéro référence APM"
+
+#. module: servoo_sales
 #: model:res.groups,name:servoo_sales.group_account_user
 msgid "Accountant"
 msgstr "Comptable"
@@ -445,6 +466,7 @@ msgstr "Formule Montant"
 #. module: servoo_sales
 #: model_terms:ir.ui.view,arch_db:servoo_sales.view_servoo_move_form
 #: model_terms:ir.ui.view,arch_db:servoo_sales.wizard_supplier_invoice_form
+#: model_terms:ir.ui.view,arch_db:servoo_sales.wizard_supplier_validation_form
 msgid "Approve"
 msgstr "Approuver"
 
@@ -483,9 +505,19 @@ msgid "Bills"
 msgstr "Factures"
 
 #. module: servoo_sales
+#: model:ir.model.fields.selection,name:servoo_sales.selection__account_move__state__cancel
+msgid "Cancelled"
+msgstr "Annulé"
+
+#. module: servoo_sales
 #: model_terms:ir.ui.view,arch_db:servoo_sales.servoo_report_invoice_document
 msgid "Cancelled Invoice"
 msgstr "Facture annulée"
+
+#. module: servoo_sales
+#: model:ir.model.fields,field_description:servoo_sales.field_servoo_handling_rate__category_id
+msgid "Category"
+msgstr "Catégorie"
 
 #. module: servoo_sales
 #: model:ir.model.fields,field_description:servoo_sales.field_sale_order_template_line__code
@@ -540,6 +572,11 @@ msgid "Customs Operations"
 msgstr "Opérations Douanières"
 
 #. module: servoo_sales
+#: model:ir.model.fields,field_description:servoo_sales.field_servoo_handling_rate__office_code_id
+msgid "Customs office"
+msgstr "Bureau Douane"
+
+#. module: servoo_sales
 #: model:ir.model.fields,field_description:servoo_sales.field_account_bank_statement_line__department_id
 #: model:ir.model.fields,field_description:servoo_sales.field_account_move__department_id
 #: model:ir.model.fields,field_description:servoo_sales.field_account_payment__department_id
@@ -566,6 +603,7 @@ msgstr "Approbation de la Direction"
 
 #. module: servoo_sales
 #: model_terms:ir.ui.view,arch_db:servoo_sales.wizard_supplier_invoice_form
+#: model_terms:ir.ui.view,arch_db:servoo_sales.wizard_supplier_validation_form
 msgid "Discard"
 msgstr "Annuler"
 
@@ -576,6 +614,7 @@ msgstr ""
 
 #. module: servoo_sales
 #: model_terms:ir.ui.view,arch_db:servoo_sales.wizard_supplier_invoice_form
+#: model_terms:ir.ui.view,arch_db:servoo_sales.wizard_supplier_validation_form
 msgid "Do you want to confirm the operation ?"
 msgstr "Voulez-vous confirmer l'opération ?"
 
@@ -584,6 +623,11 @@ msgstr "Voulez-vous confirmer l'opération ?"
 #: model:ir.model.fields.selection,name:servoo_sales.selection__sale_order__agency_name__douala
 msgid "Douala"
 msgstr ""
+
+#. module: servoo_sales
+#: model:ir.model.fields.selection,name:servoo_sales.selection__account_move__state__draft
+msgid "Draft"
+msgstr "Brouillon"
 
 #. module: servoo_sales
 #: model_terms:ir.ui.view,arch_db:servoo_sales.servoo_report_invoice_document
@@ -608,6 +652,25 @@ msgid "FCFA"
 msgstr ""
 
 #. module: servoo_sales
+#: model:ir.model.fields,field_description:servoo_sales.field_sale_order__handling_rate_id
+msgid "Good Type"
+msgstr "Type de marchandise"
+
+#. module: servoo_sales
+#: model:ir.actions.act_window,name:servoo_sales.action_handling_rate
+#: model:ir.model,name:servoo_sales.model_servoo_handling_rate
+#: model:ir.model.fields,field_description:servoo_sales.field_sale_order__handling
+#: model:ir.ui.menu,name:servoo_sales.menu_sale_handling_rate
+#: model_terms:ir.ui.view,arch_db:servoo_sales.view_servoo_handling_rate_tree
+msgid "Handling Rate"
+msgstr "Tarif manutention"
+
+#. module: servoo_sales
+#: model:ir.model,name:servoo_sales.model_servoo_handling_rate_category
+msgid "Handling Rate Category"
+msgstr "Catégorie tarif manutention"
+
+#. module: servoo_sales
 #: model:ir.module.category,description:servoo_sales.module_category_servoo_Invoice
 msgid "Helps you manage your customers invoices."
 msgstr ""
@@ -616,11 +679,6 @@ msgstr ""
 #: model:ir.model.fields,field_description:servoo_sales.field_servoo_account_move_wizard__id
 msgid "ID"
 msgstr ""
-
-#. module: servoo_sales
-#: model:ir.model.fields.selection,name:servoo_sales.selection__account_move__state__in_payment
-msgid "In payment"
-msgstr "En paiement"
 
 #. module: servoo_sales
 #: model_terms:ir.ui.view,arch_db:servoo_sales.servoo_report_invoice_document
@@ -713,13 +771,19 @@ msgstr "Approbation du contrôle de gestion"
 #: model:ir.model.fields,field_description:servoo_sales.field_account_payment__transport_means_id
 #: model:ir.model.fields,field_description:servoo_sales.field_sale_order__transport_means_id
 msgid "Means of transportation"
-msgstr "Moyens de transport"
+msgstr ""
 
 #. module: servoo_sales
 #: model_terms:ir.ui.view,arch_db:servoo_sales.report_servoo_saleorder_document
 #: model_terms:ir.ui.view,arch_db:servoo_sales.servoo_report_invoice_document
 msgid "NIU :"
 msgstr ""
+
+#. module: servoo_sales
+#: model:ir.model.fields,field_description:servoo_sales.field_servoo_handling_rate__name
+#: model:ir.model.fields,field_description:servoo_sales.field_servoo_handling_rate_category__name
+msgid "Name"
+msgstr "Nom"
 
 #. module: servoo_sales
 #: model:ir.model.fields,field_description:servoo_sales.field_account_bank_statement_line__number_of_packages
@@ -805,6 +869,11 @@ msgid "Payment Terms"
 msgstr "Modalités de paiement"
 
 #. module: servoo_sales
+#: model:ir.model.fields.selection,name:servoo_sales.selection__account_move__state__posted
+msgid "Posted"
+msgstr "Comptabilisé"
+
+#. module: servoo_sales
 #: model:ir.ui.menu,name:servoo_sales.product_product_menu_purchasable
 #: model:ir.ui.menu,name:servoo_sales.product_product_menu_sellable
 msgid "Products"
@@ -841,6 +910,11 @@ msgid "Rate"
 msgstr "Taux"
 
 #. module: servoo_sales
+#: model:ir.model.fields,field_description:servoo_sales.field_servoo_handling_rate__rate
+msgid "Rate"
+msgstr "Tarif"
+
+#. module: servoo_sales
 #: model:ir.ui.menu,name:servoo_sales.menu_action_move_out_receipt_type
 msgid "Receipts"
 msgstr "Reçus"
@@ -852,6 +926,11 @@ msgstr "Bon de commande"
 
 #. module: servoo_sales
 #: model_terms:ir.ui.view,arch_db:servoo_sales.view_servoo_move_form
+msgid "Send to Accounting"
+msgstr "Envoyer à la comptabilité"
+
+#. module: servoo_sales
+#: model_terms:ir.ui.view,arch_db:servoo_sales.view_servoo_move_form
 msgid "Send to Department"
 msgstr "Envoyer au département"
 
@@ -859,6 +938,11 @@ msgstr "Envoyer au département"
 #: model_terms:ir.ui.view,arch_db:servoo_sales.view_servoo_move_form
 msgid "Send to Direction"
 msgstr "Envoyer à la Direction"
+
+#. module: servoo_sales
+#: model:ir.model.fields,field_description:servoo_sales.field_servoo_handling_rate__operation
+msgid "Sens Operation"
+msgstr "Sens de l'opération"
 
 #. module: servoo_sales
 #: model:ir.ui.menu,name:servoo_sales.shipping_invoice_menu
@@ -914,11 +998,17 @@ msgstr "Soumise"
 
 #. module: servoo_sales
 #: model:ir.actions.act_window,name:servoo_sales.action_wizard_supplier_invoice
+#: model:ir.actions.act_window,name:servoo_sales.action_wizard_supplier_validation_invoice
 #: model:ir.model.fields,field_description:servoo_sales.field_servoo_account_move_wizard__account_move_id
 #: model:ir.module.category,name:servoo_sales.module_category_servoo_supplier_invoice
 #: model:ir.ui.menu,name:servoo_sales.supplier_invoice_menu_root
 msgid "Supplier Invoice"
 msgstr "Facture fournisseur"
+
+#. module: servoo_sales
+#: model_terms:ir.ui.view,arch_db:servoo_sales.wizard_supplier_validation_form
+msgid "Supplier Invoice Validation"
+msgstr ""
 
 #. module: servoo_sales
 #: model:ir.model,name:servoo_sales.model_servoo_account_move_wizard
@@ -1121,7 +1211,12 @@ msgstr "quatre"
 #: code:addons/servoo_sales/models/utils.py:0
 #, python-format
 msgid "fourteen"
-msgstr "quatorze"
+msgstr "quatorze
+
+#. module: servoo_sales
+#: model:ir.ui.menu,name:servoo_sales.menu_finance_handling_rate
+msgid "handling Rate"
+msgstr "Tarif manutention"
 
 #. module: servoo_sales
 #: model:ir.module.category,description:servoo_sales.module_category_servoo_account
